<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".activities.ChineseIntroductionActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/light_purple">

        <!--BackBtn-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_black"/>

        <!--toolbar title-->
        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="Introduction"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <!--All content under scrollview-->
    <ScrollView
        android:layout_below="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!---->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@drawable/shape_rect01"/>-->

                <ImageView
                    android:id="@+id/introIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_icon" />

                <TextView
                    android:id="@+id/chineseLgTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/introIcon"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Chinese Language"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/chineseLgTv01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/intro01"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/chineseLgTv02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv01"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="What is Chinese Language?"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/chineseLgTv03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv02"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/intro02"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/introIcon01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv03"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_icon01" />

                <TextView
                    android:id="@+id/chineseLgTv04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/introIcon01"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/intro03"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/introIcon02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv04"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_icon02" />

                <TextView
                    android:id="@+id/chineseLgTv05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/introIcon02"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/intro04"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/introIcon03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv05"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_icon03" />

                <TextView
                    android:id="@+id/toChineseCharTv"
                    android:layout_below="@id/introIcon03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/to_char"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="10dp"
                    app:drawableEndCompat="@drawable/ic_next_black"
                    android:clickable="true" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>