<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".activities.ChineseCharacterActivity">


    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/light_purple">

        <!--BackBtn-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_black"/>

        <!--toolbar title-->
        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="Chinese Characters"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!---->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">



                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/charImgView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_char"
                    />

                <TextView
                    android:id="@+id/chineseLgTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/charImgView"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Strokes and Radicals"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/charTv01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chineseLgTv"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/char01"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/char01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/charTv01"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_char01" />

                <TextView
                    android:id="@+id/charTV02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/char01"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/char02"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/char02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/charTV02"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_intro_char02" />

                <TextView
                    android:id="@+id/charTV03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/char02"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineHeight="22sp"
                    android:text="@string/char03"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>